# zisync

./: .gitignore  .ycm_extra_conf.py  Makefile.am  ZiSyncKernelSolution.sln  build-kernel.sh  build-libssl.sh-no-install  build_android.conf.exmaple  build_android.sh  clear_orig.sh  configure.ac  setenv_android.sh
include/: zisync_kernel.h
msvc/: ReadMe.txt  libtar.sh  libzisync.vcxproj  libzisync.vcxproj.filters  rpc.sh  stdafx.cpp  test_database.cpp  test_database.vcxproj  test_database.vcxproj.filters  test_discover.vcxproj  test_discover.vcxproj.filters  test_fs.vcxproj  test_fs.vcxproj.filters  test_history.vcxproj  test_history.vcxproj.filters  test_kernel.vcxproj  test_kernel.vcxproj.filters  test_kernel_app.cpp  test_pkcs12_cert.vcxproj  test_pkcs12_cert.vcxproj.filters  test_transfer.vcxproj  test_transfer.vcxproj.filters  test_udp_broadcast_windows.cpp  test_udp_broadcast_windows.vcxproj  test_utils.vcxproj  test_x509_cert.cpp  (+4 more)
src/: Makefile.am
src/zisync/kernel/: endpoint.h  format.cc  format.h  kernel.cc  kernel_stats.h  kernel_stats.m  permission.cc  permission.h  router.cc  router.h  status.h  sync_const.h  sync_tree_agent.cc  sync_tree_agent.h  tree_status.cc  tree_status.h  zslog.cc  zslog.h
src/zisync/kernel/database/: broadcast.cc  broadcast.h  content.cc  content.h  content_provider.cc  content_provider.h  content_resolver.cc  content_resolver.h  icontent.cc  icontent.h  icore.cc  icore.h  table.cc  table.h  xsqlite.cc  xsqlite.h
src/zisync/kernel/discover/: dht.c  discover.h  discover_data_store.cc  discover_data_store.h  discover_worker.cc  discover_worker.h
src/zisync/kernel/history/: history.h  history_data_source.cc  history_data_source.h  history_manager.cc  history_manager.h
src/zisync/kernel/libevent/: dht.h  dht_func.c  discover.h  discover_data_source.cc  discover_data_source.h  discover_server.cc  discover_server.h  hostcheck.h  http.h  http_request.cc  http_request.h  http_response.cc  http_response.h  libevent++.cc  libevent++.h  libevent_base.cc  libevent_base.h  libtar++.cc  libtar++.h  openssl_hostname_validation.c  openssl_hostname_validation.h  report_data_server.cc  report_data_server.h  tar.h  tar_download_task.cc  tar_download_task.h  tar_get_task.cc  tar_get_task.h  tar_put_task.cc  tar_put_task.h  tar_reader.cc  tar_reader.h  tar_upload_task.cc  tar_upload_task.h  tar_writer.cc  tar_writer.h  transfer.h  transfer_connection.cc  transfer_connection.h  transfer_server2.cc  (+5 more)
src/zisync/kernel/monitor/: MonitorReportEventRequestIOS.h  delayed_directory_change_handler.cc  delayed_directory_change_handler.h  directory_changes_windows.cc  directory_changes_windows.h  fs_monitor.cc  fs_monitor.h  fs_monitor_ios.cc  fs_monitor_linux.cc  fs_monitor_mac.cc  fs_monitor_windows.cc  fsevent_report_request_ios.proto  monitor.cc  monitor.h
src/zisync/kernel/notification/: inotification.h  notification.cc  notification.h
src/zisync/kernel/platform/: NSObject+PostUserNotification.h  NSObject+PostUserNotification.m  common.h  cross.cc  ifaddrs.c  network.h  os_file.cc  os_file.h  platform.cc  platform.h  platform_linux.cc  platform_linux.h  platform_mac.cc  platform_mac.h  platform_windows.cc  platform_windows.h
src/zisync/kernel/proto/: kernel.proto  verify.proto
src/zisync/kernel/transfer/: fdbuf.cc  fdbuf.h  tar_download_task.cc  tar_download_task.h  tar_get_handler.cc  tar_get_handler.h  tar_get_task.cc  tar_get_task.h  tar_get_task_common.cc  tar_get_task_common.h  tar_helper.h  tar_put_handler.cc  tar_put_handler.h  tar_put_task.cc  tar_put_task.h  task_monitor.cc  task_monitor.h  transfer.h  transfer.proto  transfer_server.cc  transfer_server.h
src/zisync/kernel/utils/: abort.cc  abort.h  base64.cc  base64.h  cipher.cc  cipher.h  configure.cc  configure.h  context.cc  context.h  default_logger.cc  device.cc  device.h  discover_device.cc  discover_device.h  download.cc  download.h  error.cc  event_notifier.cc  event_notifier.h  file_stat.cc  file_stat.h  ignore.cc  ignore.h  inner_request.cc  inner_request.h  issue_request.cc  issue_request.h  message.cc  message.h  normalize_path.cc  normalize_path.h  normalize_path_linux.cc  normalize_path_window.cc  pkcs12_cert.cc  pkcs12_cert.h  plain_config.cc  plain_config.h  platform.h  query_cache.cc  (+53 more)
src/zisync/kernel/worker/: inner_worker.cc  inner_worker.h  outer_worker.cc  outer_worker.h  refresh_worker.cc  refresh_worker.h  report_monitor.cc  report_monitor.h  sync_file.cc  sync_file.h  sync_file_task.cc  sync_file_task.h  sync_worker.cc  sync_worker.h  worker.cc  worker.h
test/zisync/kernel/: Makefile.am  framework.cc  test_broadcast.sh  test_broadcast1.sh  test_commondictionary.cc  test_daemon.cc  test_discover.sh  test_discover_data_store.cc  test_discover_server.cc  test_history.cc  test_history_kernel.cc  test_idiscover_server.cc  test_kernel.cc  test_pkcs12_cert.cc  test_remove_remote_file.cc  test_report_data_server.cc  test_reporter_dox_stdout.cc  test_reporter_dox_stdout.h  test_tool_func.cc  test_tool_func.h  test_transfer_list.cc  test_ui_event_server.cc  test_x509_cert.cc
test/zisync/kernel/daemon/: test_daemon.cc
test/zisync/kernel/database/: test_broadcast.cc  test_content_provider.cc  test_content_resolver.cc  test_icontent.cc  test_icore.cc  test_xsqlite.cc
test/zisync/kernel/libevent/: parse_file.sh  test_async.cc  test_libevent_base.cc  test_libevent_main.cc  test_parse_http_header.cc  test_tar_reader.cc  test_tar_writer.cc  test_transfer_server2.cc
test/zisync/kernel/transfer/: ssl.sh  test_create_file.cc  test_server.sh  test_task.cc  test_transfer_server.cc  transfer.sh  transfer_test_proto.cc
test/zisync/kernel/transfer/ssl/: ssl.sh
test/zisync/kernel/utils/: test_cipher.cc  test_fs.cc  test_ignore.cc  test_normalize.cc  test_synclist.cc  test_utils.cc  test_zmq.cc
third-part/UnitTest++-1.4/: .gitignore  Makefile.am  build.sh  build_android.sh  configure-ios-arm64  configure.ac
third-part/UnitTest++-1.4/src/: Config.h
third-part/libuuid-2.25.1-rc1/: build.sh  build_android.sh  configure.ac
third-part/libuuid-2.25.1-rc1/src/: Makefile.am  c.h
(+136 files in other folders)
